--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   bg-warning navbar-light">
      <div class="container-fluid">
          <a class="navbar-brand" href="#">
-             <img src="../Img/anime logo.png" alt="Avatar logo" style="width: 100px;">
+             <img src="anime logo.png" alt="Avatar logo" style="width: 100px;">
          </a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
              <span class="navbar-toggler-icon"></span>
@@ -69,19 +69,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../Img/dragonball2giphy.webp" alt="" class="d-block" width="100%" height="400px">
+                <img src="dragonball2giphy.webp" alt="" class="d-block" width="100%" height="400px">
             </div>
             <div class="carousel-item">
-                <img src="../Img/your lie in april.webp" alt="" class="d-block" width="100%"height="400px">
+                <img src="your lie in april.webp" alt="" class="d-block" width="100%"height="400px">
             </div>
             <div class="carousel-item">
-                <img src="../Img/bleach gif.webp" alt="" class="d-block" width="100%"height="400px">
+                <img src="bleach gif.webp" alt="" class="d-block" width="100%"height="400px">
             </div>
             <div class="carousel-item">
-              <img src="../Img/tada never falls in love.webp" alt="" class="d-block" width="100%"height="400px">
+              <img src="tada never falls in love.webp" alt="" class="d-block" width="100%"height="400px">
           </div>
           <div class="carousel-item">
-            <img src="../Img/demonslayergiphy.webp" alt="" class="d-block" width="100%"height="400px">
+            <img src="demonslayergiphy.webp" alt="" class="d-block" width="100%"height="400px">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#goku" data-bs-slide="prev">
@@ -217,7 +217,7 @@
     </p>
     <div class="row mt-5 pt-5 justify-content-evenly align-items-start bg-danger">
       <div class="col-md-3 col-11 border border-2 p-2 mb-md-0 mb-5 bg-warning">
-        <img src="../Img/bleach.png" class="img-fluid img-thumbnail rounded-circle position-relative" style="top: -10px;" alt="">
+        <img src="bleach.png" class="img-fluid img-thumbnail rounded-circle position-relative" style="top: -10px;" alt="">
         <h1 class="position-relative" style="top: -5px;">Bleach</h1>
         <p class="lead fw-bolder text-muted position-relative" style="top: -10px;">
         Watch Bleach now for free
@@ -239,7 +239,7 @@
 
 
       <div class="col-md-3 col-11 border border-2 p-2 mt-md-0 mt-5 bg-warning">
-        <img src="../Img/horimiya.jpg" class="img-fluid img-thumbnail rounded-circle position-relative" style="top: -10px;" alt="">
+        <img src="horimiya.jpg" class="img-fluid img-thumbnail rounded-circle position-relative" style="top: -10px;" alt="">
         <h1 class="position-relative" style="top: -20px;">Horimiya</h1>
         <p class="lead fw-bolder text-muted position-relative" style="top: -20px;">
           Watch Horimiya now for free
@@ -262,7 +262,7 @@
 
 
       <div class="col-md-3 col-11 border border-2 p-2 mt-md-0 mt-5 bg-warning">
-        <img src="../Img/jobless reincarnation.jpg" class="img-fluid img-thumbnail rounded-circle position-relative" style="top: -10px;" alt="">
+        <img src="jobless reincarnation.jpg" class="img-fluid img-thumbnail rounded-circle position-relative" style="top: -10px;" alt="">
         <h2 class="position-relative" style="top: -10px;">Jobless Reincarnation</h2>
         <p class="lead fw-bolder text-muted position-relative" style="top: -10px;">
           Watch Jobless Reincarnation now for free
